--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   uuid: ^4.3.3
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
