--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.1.2
+  go_router: ^13.2.1
   uuid: ^4.3.3
+  provider: ^6.1.2
   flutter_bloc: ^8.1.4
 
 dev_dependencies:
