--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   go_router: ^13.2.1
   uuid: ^4.3.3
   provider: ^6.1.2
-  flutter_bloc: ^8.1.4
+  flutter_bloc: ^8.1.5
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
