--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   flutter_riverpod: ^2.5.1
   rxdart: ^0.27.7
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
