--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,15 @@ dependencies:
   flutter_riverpod: ^2.5.1
   rxdart: ^0.28.0
   flutter_hooks: ^0.20.5
+  mobx: ^2.3.3+2
+  flutter_mobx: ^2.2.1+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
+  mobx_codegen: ^2.6.1
 
 flutter:
   uses-material-design: true
