--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,22 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  go_router: ^14.2.1
-  uuid: ^4.4.2
-  provider: ^6.1.2
-  flutter_bloc: ^8.1.6
-  flutter_riverpod: ^2.5.1
+  go_router: ^14.8.1
+  uuid: ^4.5.1
+  provider: ^6.1.4
+  flutter_bloc: ^9.1.0
+  flutter_riverpod: ^2.6.1
   rxdart: ^0.28.0
-  flutter_hooks: ^0.20.5
-  mobx: ^2.3.3+2
-  flutter_mobx: ^2.2.1+1
+  flutter_hooks: ^0.21.2
+  mobx: ^2.5.0
+  flutter_mobx: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  build_runner: ^2.4.12
-  mobx_codegen: ^2.6.1
+  flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  mobx_codegen: ^2.7.0
 
 flutter:
   uses-material-design: true
